// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Buttons Main 1`] = `
<div>
  <div
    class="chakra-button__group css-1tj2xmw"
    role="group"
  >
    <button
      class="chakra-button css-ualqzd"
      type="button"
    >
      main
    </button>
    <button
      class="chakra-button css-ualqzd"
      disabled=""
      type="button"
    >
      main disabled
    </button>
    <button
      class="chakra-button css-ualqzd"
      type="button"
    >
      <span
        class="chakra-button__icon css-1wh2kri"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="26px"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="26px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      main plus
    </button>
    <button
      class="chakra-button css-ualqzd"
      disabled=""
      type="button"
    >
      <span
        class="chakra-button__icon css-1wh2kri"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="26px"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="26px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      main plus disabled
    </button>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`Storyshots UI/Buttons Secondary 1`] = `
<div>
  <div
    class="chakra-button__group css-1tj2xmw"
    role="group"
  >
    <button
      class="chakra-button css-10d1trf"
      type="button"
    >
      secondary
    </button>
    <button
      class="chakra-button css-1dk46hu"
      disabled=""
      type="button"
    >
      secondary disabled
    </button>
    <button
      class="chakra-button css-16o9esw"
      type="button"
    >
      <span
        class="chakra-button__icon css-1wh2kri"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="26px"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="26px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      secondary plus
    </button>
    <button
      class="chakra-button css-1dk46hu"
      disabled=""
      type="button"
    >
      <span
        class="chakra-button__icon css-1wh2kri"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="26px"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="26px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      secondary plus disabled
    </button>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
